--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ established security policies.
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <h5 class="margin-bottom-30">Keep in touch</h5>
                     <div class="contact-text">
-                        <p> Websy office near Green valley Madanpur
+                        <p> Email: 0dixitkartik@gmail.com
                             <br>Bhubaneswar
                         </p>
                         <p>PIN code- 752054</p>
