--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ established security policies.
                 <!-- ***** Contact Form Start ***** -->
                 <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="contact-form">
-                        <form id="contact" action="sendmail.php" method="POST">
+                        <form id="contact" action="https://formspree.io/f/xnqrdeba" method="POST">
                             <div class="row">
                                 <div class="col-lg-6 col-md-12 col-sm-12">
                                     <fieldset>
