--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ established security policies.
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Talk To Us</h2>
+                        <h2 class="section-title">Let us talk!</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
